_sass/_customizations.scss
@media print {
    /*
    body {
        width: 960px !important;
    }
    */

    /*
    .track-header {
        position: relative !important;
    }
    */
    .hiding {
        opacity: 1
    }
}
.footer,
.menu-trigger,
.logo-navbar,
.speaker-img,
.noprint {
    @media print {
        display: none;
        visibility: hidden;
        clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
    }
}
.noscreen {
    @media screen {
        clip-path: polygon(0px 0px,0px 0px,0px 0px,0px 0px);
    }
}
.jumbotron {
    @media print {
         margin: 0 0 0 0;
         padding: 0 0 0 15px;
    }
}
.section {
    @media print {
        padding-top: 0;
        padding-bottom: 0;
        min-height: 0;
    }
}
.schedule {
    @media print {
        padding-top: 0;
        padding-bottom: 0;

        .speaker-name {
            margin-left: 0;
            margin-right: 48px;
            margin-bottom: 4px;
            line-height: normal;
        }

        ul,
        li {
            font-size: 14px;
            margin-top: 0;
            margin-bottom: 0;
        }
    }
}
.schedule-table {
    @media print {
        margin-bottom: 30px;
        page-break-inside: avoid;
    }
    &:last-child {
        margin-bottom: 0;
    }
}
.slot-content {
    @media print {
        min-height: 0;
        padding: 10px 15px 0px;
        border-right: 5px solid #a1a1a1;
        .service-description {
            margin-bottom: 0;
        }
    }
}
.slot-title {
    @media print {
        font-size: 18px;
    }
}
.slot-language {
    @media print {
        font-size: 11px;
    }
}
.slot-speakers {
    margin-bottom: 5px;
    @media print {
        @include flexbox();
        display: inline-table;
        list-style-position: inside;
        list-style-type: circle;
        list-style: none;
        margin-top: 5px;
        margin-bottom: 0;
    }
}
time {
    @media print {
        display: inline;
    }
}
.timeslot {
    @media print {
        page-break-inside: avoid;
        clear: both;
    }
}
.timeslot-elements {
    @media print {
        margin-left: 120px;
    }
}
.timeslot-label {
    padding-bottom: 0;
    @media print {
        @include flexbox();
        justify-content: space-between;
        font-size: 18px;
        padding-bottom: 0;
        width: 120px;
    }
}
.top-section {
    @media print {
         padding: 0 0 0 15px;
         min-height: 0;
         background-color: transparent;
    }
}
.track-header-label {
    span {
        @media print {
            font-size: 14px;
        }
    }
}
.modal-body {
    max-height: 85vh;
    overflow-y: auto;
}

.post-section {
    table tbody > tr > td:last-child {
        padding-left: 30px;
    }
}

